--- a/static/style.css
+++ b/static/style.css
@@ -5,21 +5,22 @@ body {
 
 body {
     background-image: url('../html_Images/birds_back.jpg');
-    background-repeat: no-repeat, no-repeat;
+    background-repeat: no-repeat;
     background-size: 50%;
-    background-position: right bottom, right bottom;
+    background-attachment: scroll;
+    background-position: right bottom;
 }
 
 #search {
-    padding-right: 55%;
-    padding-top: 30%;    
+    padding-left: 128px;
+    padding-top: 200px;    
 }
 
 #seabird {
-    float: center;
-    padding-right: 60%;
     visibility: hidden;
-    width: 50%;
+    float: left;
+    padding-top: 100px;
+    padding-left: 250px;
+    width: 30%;
 }
-
 
