--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="/static/style.css">
 
     <!--D3 cdn-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
@@ -20,26 +20,29 @@
     <div class="row">
       <div id="search" class="container">  
         <a href="#/" onclick="openFileLoad()">
-            <img src="../html_Images/birdIconWithText.png" width="214px" height="214px"/>
+            <img src="/static/html_Images/birdIconWithText.png" width="275px" height="275px"/>
         </a>
       </div>
     </div>
     <div class="row">
-      <div id="seabird" class="container">  
-        <div  class="custom-file">
-            <input type="file" class="custom-file-input" id="customFile">
+      <div id="seabird" class="container col-md-5"> 
+        <p>That looks like my cousin.</p> 
+     <!--  <div  class="custom-file">
+            <input type="file" class="custom-file-input" id="customFile" action='/'>
             <label class="custom-file-label" for="customFile">Choose file</label>
-        </div>
-
-        <div class="input-group-append" action='/'>
-          <button class="btn btn-primary" type="submit" value=Upload>Upload</button>
-        </div>
-
+            <button class="btn btn-primary" type="submit" value=Upload>Upload</button> -->
+          <form method=post enctype=multipart/form-data>
+            <input type=file name=file>
+            <input type=submit value=Upload onclick="gotIt()">
+          </form>
+      <!--  </div> -->          
+      </div>
+      <div id="spaceer" class="container col-md-7">
       </div>
     </div>
     <!-- JavaScript -->
     <!-- custom first, then jQuery, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="../static/func.js"></script>
+    <script type="text/javascript" src="/static/func.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
