I have no idea what is going on

--- a/static/style.css
+++ b/static/style.css
@@ -34,6 +34,13 @@ body {
 }
 
 #wikipic {
+    visibility: hidden;
     padding-left: 128px;
     padding-top: 200px;
+}
+
+#wikitable {
+    visibility: hidden;
+    padding-left: 128px;
+    padding-top: 50px;
 }
