--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,8 @@
         <img src="/static/html_Images/birdIconWithText.png" width="275px" height="275px" onclick="openFileLoad()"/>
       </div>
       <div id="wikipic" class="col-md-4">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/24/Landsvale.jpg" width="250px" height="250px" />
+        <img id="bird" src="#" width="250px" height="250px" />
+        <img id="map" src="#" width="250px" height="250px" />\
       </div>
       <div id="spacer" class="container col-md-4"></div>
     </div>
@@ -34,6 +35,12 @@
             <input type=submit value=Upload onclick="gotIt()"/>
           </form>
       </div>
+      <div id="wikitable" class="col-md-4">
+          {% for bird_fact in bird_data.bird.facts_table %}
+                <p>{{bird_fact}}</p>
+          {% endfor %}
+          <img src={{bird_data.bird.img}} />
+        </div>
       <div id="spacer" class="container col-md-5"></div>
     </div>
 
