--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="row">
       <div id="seabird" class="container col-md-7"> 
-          <form method=post enctype=multipart/form-data>
+          <form action='http://127.0.0.1:5000/postfile' method='POST'enctype=multipart/form-data>
             <input type=file name=file>
             <input type=submit value=Upload onclick="gotIt()"/>
           </form>
