--- a/templates/index.html
+++ b/templates/index.html
@@ -22,26 +22,27 @@
       <div id="search" class="container col-md-4">  
         <img src="/static/html_Images/birdIconWithText.png" width="275px" height="275px" onclick="openFileLoad()"/>
       </div>
-      <div id="wikipic" class="col-md-4">
+     <!-- <div id="wikipic" class="col-md-4">
         <img id="bird" src="#" width="250px" height="250px" />
         <img id="map" src="#" width="250px" height="250px" />\
       </div>
-      <div id="spacer" class="container col-md-4"></div>
+      <div id="spacer" class="container col-md-4"></div>-->
     </div>
     <div class="row">
       <div id="seabird" class="container col-md-7"> 
           <form action='http://127.0.0.1:5000/postfile' method='POST'enctype=multipart/form-data>
             <input type=file name=file>
-            <input type=submit value=Upload onclick="gotIt()"/>
+            <input type=submit value=Upload/>
+          <!--  <input type=submit value=Upload onclick="gotIt()"/> -->
           </form>
       </div>
-      <div id="wikitable" class="col-md-4">
+    <!--  <div id="wikitable" class="col-md-4">
           {% for bird_fact in bird_data.bird.facts_table %}
                 <p>{{bird_fact}}</p>
           {% endfor %}
           <img src={{bird_data.bird.img}} />
-        </div>
-      <div id="spacer" class="container col-md-5"></div>
+        </div> 
+      <div id="spacer" class="container col-md-5"></div>-->
     </div>
 
     <!-- JavaScript -->
