--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,8 @@
         <img id="bird" src="#" width="250px" height="250px" />
         <img id="map" src="#" width="250px" height="250px" />\
       </div>
-      <div id="spacer" class="container col-md-4"></div>
-    </div>-->
+      <div id="spacer" class="container col-md-4"></div>-->
+    </div>
     <div class="row">
       <div id="seabird" class="container col-md-7"> 
           <form action='http://127.0.0.1:5000/postfile' method='POST'enctype=multipart/form-data>
@@ -36,10 +36,8 @@
           </form>
       </div>
       <!--<div id="wikitable" class="col-md-4">
-          {% for bird_fact in bird_data.bird.facts_table %}
-                <p>{{bird_fact}}</p>
-          {% endfor %}
-          <img src={{bird_data.bird.img}} />
+         
+  />
         </div>
       <div id="spacer" class="container col-md-5"></div>
     </div>-->
