--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="row">
       <div id="search" class="container col-md-4">  
-        <img src="/static/html_Images/birdIconWithText.png" width="275px" height="275px" onclick="openFileLoad()"/>
+        <img src="/static/html_Images/birdIcon_askForImg.png" width=80% onclick="openFileLoad()"/>
       </div>
      <!-- <div id="wikipic" class="col-md-4">
         <img id="bird" src="#" width="250px" height="250px" />
