--- a/templates/return.html
+++ b/templates/return.html
@@ -39,7 +39,7 @@
         </div>
       </div>
 
-      <div id="wikitable2" class="container col-md-4">
+      <div class="container col-md-4">
           {{bird_data.facts_table | safe }}
       </div>
     </div>
