having issues with the display

--- a/static/style.css
+++ b/static/style.css
@@ -41,3 +41,9 @@ body {
     display: inline-block;
     padding:50px;
 }
+
+.header {
+    height: 200px;
+    width:100%;
+    background-color: black;
+}
