--- a/static/style.css
+++ b/static/style.css
@@ -1,21 +1,9 @@
-@font-face {
-    font-family: 'MyWebFont';
-    src:  url('miss_smarty_pants_skinny-webfont.woff2') format('woff2'),
-          url('https://drive.google.com/open?id=1ezByshuz1hyVClhbz6M8JW25_DZxaiao') format('woff'),
-          url('Miss-Smarty-Pants-Skinny.ttf') format('truetype');
-    font-weight: normal;
-  }
-
-html,
-body {
-    height: 100%;
-}
 
 body {
     background-image: url('/static/html_Images/birds_back.jpg');
     background-repeat: no-repeat;
     background-size: 50%;
-    background-attachment: scroll;
+    background-attachment: fixed; 
     background-position: right bottom;
     z-index: -1;
 }
@@ -33,10 +21,6 @@ body {
     width: 30%;
 }
 
-#wikitable2 {
-    padding: 5em;
-}
-
 #bird {
     display: inline-block;
     padding:50px;
@@ -45,5 +29,9 @@ body {
 .header {
     height: 200px;
     width:100%;
-    background-color: black;
+    background-color: rgb(255, 255, 255);
+}
+
+.card {
+    border-color: rgb(217, 217, 217);
 }
